--- a/受注伝票.md
+++ b/受注伝票.md
@@ -12,9 +12,9 @@
 　出荷ブロック
 
 * 出荷ポイント決定
-　1. 出荷条件　－＞　①伝票タイプ <br> ②出荷先  　
-　2. 積載グループ　－＞ 品目  
-　3. プラント  
+　1.  出荷条件　－＞　①伝票タイプ <br> ②出荷先 <br> 　
+　2.  積載グループ　－＞ 品目  
+　3.  プラント  
 
 
 * 納入日付
